# coreferee

./: Dockerfile  LICENSE  NOTICE  README.md  SHORTREADME.md  eval.py  setup.cfg
coreferee/lang/pl/: language_specific_rules.py
coreferencer/: __init__.py  __main__.py  data_model.py  errors.py  manager.py  rules.py  test_utils.py
coreferencer/lang/pl/: language_specific_rules.py
coreferencer/training/: train.py
models/pl/: setup.cfg
tests/common/: test_annotation_common.py  test_data_model_common.py  test_errors.py  test_rules_common.py  test_tech_common.py  test_tendencies_common.py
tests/pl/: test_rules_pl.py  test_smoke_tests_pl.py
