[metadata]
name = coreferencer
version = 1.1.2
description = Coreference resolution for Polish
long_description = file: SHORTREADME.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Polish
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
  spacy>=3.1.0,<3.2.0
  keras>=2.4.0
  tensorflow~=2.5.0;platform_system!="Darwin"
  tensorflow-macos~=2.6.0;platform_system=="Darwin"
[options.package_data]
* = *.dat, *.cfg
